Corrects the positioning of the banner in top navigation. Also, removes the overflow hidden that skewed the placement of icons. Also, removes the data-transform on the sign-in icon to position it correctly. [Fixes #123]

--- a/_scss/component/nav.scss
+++ b/_scss/component/nav.scss
@@ -121,8 +121,8 @@ $nav_item_height: 17px + 24px;
     @include media($SM) {
       display: inline-block;
       max-width: rem(130px);
-      text-overflow: ellipsis;
-      overflow: hidden;
+      // text-overflow: ellipsis;
+      // overflow: hidden; This still messes with the line-height.
     }
   }
 
@@ -507,6 +507,13 @@ $nav_item_height: 17px + 24px;
       padding: 0 $size-M;
     }
 
+  }
+
+  &__header-container {
+    position: relative;
+    max-width: $site-max-width;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   &__section-link {
